Added swagger comments to the controllers for the users and fixed a method.
