# swagger.json
@@ -118,7 +118,7 @@
             "description": "The PRECONDITION FAILED in the validation of the Profile data"
           },
           "500": {
-            "description": "There was an INTERNAL SERVER ERROR while trying to GET the selected Profile"
+            "description": "There was an INTERNAL SERVER ERROR while trying to POST the selected Profile"
           }
         }
       }
@@ -152,7 +152,7 @@
       },
       "put": {
         "summary": "UPDATES a Profile that has been selected by username with any new data entered",
-        "description": "The updated data for the Profile changes the database",
+        "description": "The changed data for the Profile updates the database",
         "parameters": [
           {
             "name": "username",
@@ -203,7 +203,7 @@
         ],
         "responses": {
           "204": {
-            "description": "SUCCESS, PUT   the selected Profile in the database"
+            "description": "SUCCESS (with no content returned), PUT   the selected Profile in the database"
           },
           "400": {
             "description": "BAD REQUEST your PUT was attempted with forbidden entries"
@@ -221,7 +221,7 @@
       },
       "delete": {
         "summary": "DELETES a Profile by its username",
-        "description": "After deletion it permanently removed fromt he database.",
+        "description": "With deletion it",
         "parameters": [
           {
             "name": "username",
@@ -248,21 +248,23 @@
     },
     "/user/": {
       "get": {
-        "description": "",
+        "summary": "GETS all the users",
+        "description": "All users are displayed.",
         "responses": {
           "200": {
-            "description": "Successfully Retrieved of all users"
+            "description": "SUCCESS, GET retrieved all users"
           },
           "404": {
-            "description": "Not Found"
+            "description": "The attempted GET of all users was Not Found"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "There was an INTERNAL SERVER ERROR while trying to GET all users"
           }
         }
       },
       "post": {
-        "description": "",
+        "summary": "POSTS input to create a new user",
+        "description": "The entered user information is added to the database.",
         "parameters": [
           {
             "name": "body",
@@ -309,23 +311,24 @@
         ],
         "responses": {
           "201": {
-            "description": "Successfully Created users Object"
+            "description": "SUCCESS, POST   a new user"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "BAD REQUEST your POST was attempted with forbidden entries"
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "The PRECONDITION FAILED in the validation of the user data"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "There was an INTERNAL SERVER ERROR while trying to POST the selected user"
           }
         }
       }
     },
     "/user/{id}": {
       "get": {
-        "description": "",
+        "summary": "GETS a user by their _id",
+        "description": "The selected user is displayed.",
         "parameters": [
           {
             "name": "id",
@@ -336,21 +339,22 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully Retrieved user"
+            "description": "SUCCESS, GET Retrieved the selected user"
           },
           "404": {
-            "description": "Not Found"
+            "description": "The attempted GET of the selected user was Not Found"
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "The PRECONDITION FAILED in the validation of the _id PARAMETER"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "There was an INTERNAL SERVER ERROR while trying to GET the selected user"
           }
         }
       },
       "put": {
-        "description": "",
+        "summary": "UPDATES a user that has been selected by _id with any new data entered",
+        "description": "The changed data for the user updates the database",
         "parameters": [
           {
             "name": "id",
@@ -367,21 +371,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "googleId": {
-                  "type": "string",
-                  "example": "Updated googleId"
-                },
-                "githubId": {
-                  "type": "string",
-                  "example": "Updated githubId"
-                },
                 "email": {
                   "type": "string",
                   "example": "Updated email"
                 },
-                "displayname": {
+                "displayName": {
                   "type": "string",
-                  "example": "Updated displayname"
+                  "example": "Updated displayName"
                 },
                 "firstName": {
                   "type": "string",
@@ -418,24 +414,25 @@
         ],
         "responses": {
           "204": {
-            "description": "Successfully Updated user"
+            "description": "SUCCESS (with no content returned), PUT   the selected user in the database"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "BAD REQUEST your PUT was attempted with forbidden entries"
           },
           "404": {
-            "description": "Not Found"
+            "description": "The attempted PUT of the specified user for updating was Not Found"
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "The PRECONDITION FAILED in the validation of the user data"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "There was an INTERNAL SERVER ERROR while trying to PUT the data change"
           }
         }
       },
       "delete": {
-        "description": "",
+        "summary": "DELETES a user by its _id",
+        "description": "With deletion it",
         "parameters": [
           {
             "name": "id",
@@ -446,16 +443,16 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful Deletion of user"
+            "description": "SUCCESS, the user was DELETED"
           },
           "404": {
-            "description": "Not Found"
+            "description": "The selected user for DELETION was NOT FOUND"
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "The PRECONDITION FAILED in the validation of the _id PARAMETER"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "There was an INTERNAL SERVER ERROR while trying to DELETE the user"
           }
         }
       }
@@ -885,7 +882,7 @@
             "description": "You are NOT AUTHORIZED to GET the Public creationGoals"
           },
           "404": {
-            "description": "The attempted GET of all Public creationGoals within the search were Not Found GET"
+            "description": "The attempted GET of all Public creationGoals within the search were Not Found"
           }
         },
         "security": [
